--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -253,7 +253,7 @@ p {
 	width: 60%;
 }
 
-.brand_container img{
+.brand_container img {
 	width: 100%;
 }
 
@@ -917,15 +917,15 @@ p {
 .booking__form__section {
 	width: 100%;
 	margin: 1rem 0;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 .booking__form {
 	width: 100%;
-	background: url("../images/booking/contact.jpg") top left no-repeat;
-	background-size: cover;
-	height: 800px;
-	background-position: left;
+	/* background: url("../images/booking/contact.jpg") top left no-repeat; */
+	/* background-size: cover; */
+	/* height: 800px; */
+	/* background-position: left; */
 	/* background-attachment: fixed; */
 	border: 1px solid var(--border-color);
 	position: relative;
@@ -933,9 +933,9 @@ p {
 	margin-top: 1rem;
 	overflow: hidden;
 	box-sizing: border-box;
-	padding: 1rem;
+	/* padding: 1rem; */
 }
-
+/* 
 .booking__form::after {
 	content: "";
 	width: 100%;
@@ -945,7 +945,7 @@ p {
 	z-index: -1;
 	top: 0;
 	left: 0;
-}
+} */
 
 .booking__form > * {
 	z-index: 100;
@@ -956,27 +956,81 @@ p {
 }
 
 .booking__form .row .form-group,
+.booking__form .row .col-sm-6,
+.booking__form .row .col-sm-12,
 .booking__form .row .form-check {
 	margin-bottom: 1rem;
 }
 
-.form-group label {
+.form-group label,
+.col-sm-6 label,
+.col-sm-12 label,
+.booking__form .col-sm-12 h6 {
+	font-weight: bold;
+	font-size: 1rem;
+	margin-bottom: .3rem;
+}
+
+.form-check label {
+	font-weight: normal;
+}
+
+.booking__form .row p {
+	font-size: 0.8rem;
+}
+
+.booking__form h4 {
+	font-weight: bold;
+	text-transform: uppercase;
+	font-size: 1.9em;
+	text-shadow: 2px 2px 0 rgb(0 0 0 / 25%);
+	padding: 1rem;
+	margin-bottom: 1rem;
+	border-bottom: 1px solid #ddd;
+	background: var(--primary-color);
+	color: #fff;
+}
+.booking__form .row{
+	padding: 1rem;
+}
+
+.booking__form .row h5 {
+	font-weight: bold;
+	text-transform: uppercase;
+	font-size: 1.3em;
+	text-shadow: 2px 2px 0 rgb(0 0 0 / 25%);
+	padding: 1rem;
+	margin-bottom: 1rem;
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	background: var(--primary-color);
 	color: #fff;
 }
 
-.form-group .form-control {
+.row h3 {
+	font-weight: bold;
+	text-transform: uppercase;
+	font-size: 0.9rem;
+	/* padding-top: 1rem;
+	padding-bottom: 1rem;
+	margin-bottom: 1rem;
+	border-top: 1px solid #ddd;
+	border-bottom: 1px solid #ddd; */
+}
+
+/* .form-group .form-control {
 	border-top: 0;
 	border-right: 0;
 	border-left: 0;
 	background: transparent;
 	border-radius: 0;
-}
-
+} */
+/* 
 .form-group .form-control:focus {
 	background: #fff;
 	border-radius: 5px;
 	outline: #fff;
-}
+} */
 
 .form-check-input {
 	width: 20px;
@@ -984,15 +1038,15 @@ p {
 	padding: 0;
 }
 
-.form-check label {
+/* .form-check label {
 	color: var(--white-color);
 	padding-left: 1rem;
-}
+} */
 
-.booking__form p {
+/* .booking__form p {
 	margin-top: 1rem;
 	color: var(--white-color);
-}
+} */
 
 .location__with__contact__section {
 	width: 100%;
@@ -1052,7 +1106,7 @@ p {
 
 	.booking__form {
 		width: 100%;
-		height: 600px;
+		/* height: 600px; */
 	}
 
 	.booking__form .theme__button {
@@ -1460,16 +1514,16 @@ p {
 		text-align: left;
 	}
 
-	.booking__form .row {
-		margin-bottom: 2rem;
-	}
+	/* .booking__form .row {
+		margin-bottom: 1rem;
+	} */
 
 	.booking__form {
 		width: 100%;
-		height: 700px;
-		padding-left: 40px;
-		padding-right: 40px;
-		padding-top: 50px;
+		/* height: 700px; */
+		/* padding-left: 40px;
+		padding-right: 40px; */
+		/* padding-top: 20px; */
 	}
 
 	.booking__intro__container p {
