--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -331,22 +331,24 @@ p {
 
 .banner__section {
 	width: 100%;
-	background: url("../images/banner/banner.jpg") top left no-repeat;
-	background-size: cover;
 	height: 500px;
-	/* background-position: left; */
-	background-attachment: fixed;
-	border: 1px solid var(--border-color);
+	overflow: hidden;
+}
+
+.background__banner img {
+	width: 100%;
+	height: 500px;
 	position: relative;
-	z-index: 0;
+	z-index: -9;
 	margin-top: 1rem;
 	overflow: hidden;
+	object-fit: cover;
 }
 
 .banner__section::after {
 	content: "";
 	width: 100%;
-	height: 100%;
+	height: 500px;
 	background: rgba(0, 0, 0, 0.1);
 	position: absolute;
 	z-index: -1;
@@ -360,13 +362,17 @@ p {
 
 .banner__container {
 	width: 100%;
-	height: 100%;
+	height: 500px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	z-index: 100;
 	gap: 1rem;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .banner__heading {
@@ -968,7 +974,7 @@ p {
 .booking__form .col-sm-12 h6 {
 	font-weight: bold;
 	font-size: 1rem;
-	margin-bottom: .3rem;
+	margin-bottom: 0.3rem;
 }
 
 .form-check label {
@@ -990,7 +996,7 @@ p {
 	background: var(--primary-color);
 	color: #fff;
 }
-.booking__form .row{
+.booking__form .row {
 	padding: 1rem;
 }
 
@@ -1166,7 +1172,7 @@ p {
 	/* banner  */
 	.banner__section {
 		margin-top: 0;
-		height: 700px;
+		/* height: 700px; */
 	}
 
 	.banner__content p {
