Project is done

--- a/assets/css/desktop.css
+++ b/assets/css/desktop.css
@@ -445,5 +445,73 @@
 		height: 700px;
 	}
 
+	.gallery__section {
+		width: 100%;
+	}
+
+	.gallery__container {
+		width: 100%;
+		max-width: 1104px;
+		margin: 0 auto;
+		padding: 150px 40px;
+	}
+
+	.no__data__container {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.gallery__carousel__section,
+	.gallery__grid__section {
+		width: 100%;
+	}
+
+	.gallery__grid__section{
+		margin-top: 5rem;
+	}
+
+	.gallery__grid__container {
+		width: 100%;
+		display: flex;
+		justify-content: flex-start;
+		gap: 1rem;
+		flex-wrap: wrap;
+	}
+
+	.gallery__grid__card {
+		width: 32%;
+		border-radius: 1px solid #ddd;
+	}
+
+	.gallery__grid__images {
+		width: 100%;
+	}
+
+	.gallery__grid__images img {
+		width: 100%;
+		object-fit: contain;
+	}
+
+	.gallery__grid__title {
+		width: 100%;
+		border: 1px solid #ddd;
+		padding: 1rem;
+		text-align: center;
+	}
+
+	.gallery__carousel__cotnainer {
+		width: 100%;
+	}
+
+	.gallery__carousel__image {
+		width: 33%;
+	}
+
+	.gallery__carousel__image img {
+		width: 100%;
+		object-fit: contain;
+	}
+
 	/*! MEdia query ends  */
 }
